--- a/public/css/style.css
+++ b/public/css/style.css
@@ -486,36 +486,113 @@ header {
         height: 150px;
     } 
 }
-.profile_header .profile_pic {
+.profile_header .profile-pic {
     margin-top: -90px;
 }
-.profile_header .profile_pic img {
-    width: 180px;
-    height: 180px;
-    object-fit: cover;
-    border-radius: 100%;
-    border: 10px solid rgba(255, 255, 255, 0.4);
-}
+
 @media all and (max-width: 600px)  {
-    .profile_header .profile_pic img {
-        width: 120px;
-        height: 120px;
-        border: 5px solid rgba(255, 255, 255, 0.4);
-    }
-    .profile_header .profile_pic {
+    
+    .profile_header .profile-pic {
         margin-top: -60px;
     }
 }
 .profile_header .profile_info {
     margin-top: 20px;
 }
+.profile_header .profile_info h3 input {
+    text-align: center;
+    color: #fff;
+    font-weight: 600;
+    background: transparent;
+    border: none;
+    margin-top: 10px;
+}
 .profile_header .profile_info p {
     color: var(--secondary);
 }
+.profile_header .profile_info .bio input {
+    background: transparent;
+    border: none;
+    color: #fff;
+    text-align: center;
+    font-size: 16px;
+    color: var(--secondary);
+    margin-top: 10px;
+    outline-color: var(--primary);
+}
+.profile_header .profile_info .about {
+    padding: 0;
+}
+.profile_header .profile_info .about textarea {
+    width: 100%;
+    height: 250px;
+    white-space: normal;
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    border: none;
+    color: var(--secondary);
+    outline: var(--primary) !important;
+}
+
 @media all and (max-width: 600px) {
     .profile_header .profile_info p {
         width: 100% !important;
     }
+}
+
+.profile_header button {
+    color: #fff;
+    background: var(--primary);
+    padding: 8px 100px;
+    border-radius: 6px;
+}
+.profile-pic {
+    color: transparent;
+    transition: all 0.3s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    transition: all 0.3s ease;
+    height: 165px;
+    width: 165px;
+    margin-inline: auto;
+}
+.profile-pic input {
+    display: none;
+}
+.profile-pic img {
+    position: absolute;
+    object-fit: cover;
+    width: 165px;
+    height: 165px;
+    box-shadow: 0 0 10px 0 rgba(255, 255, 255, .35);
+    border-radius: 100px;
+    z-index: 0;
+}
+.profile-pic .-label {
+    cursor: pointer;
+    height: 165px;
+    width: 165px;
+    margin: 0px;
+}
+.profile-pic:hover .-label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, .8);
+    z-index: 10000;
+    color: #fafafa;
+    transition: background-color 0.2s ease-in-out;
+    border-radius: 100px;
+    margin-bottom: 0;
+}
+.profile-pic span {
+    display: inline-flex;
+    padding: 0.2em;
+    height: 2em;
+    margin-top: 10px;
 }
 
 /* Post Tab */
